--- a/croatia-2025.html
+++ b/croatia-2025.html
@@ -24,7 +24,7 @@
 
   <h2>Photos</h2>
   <div class="gallery">
-    <img src="images/croatia-beach.jpg" alt="Beach near Split">
+    <img src="images/IMG_22232.jpg" alt="Storm near Zagreb">
     <img src="images/dubrovnik-walls.jpg" alt="Dubrovnik city walls">
     <img src="images/hvar-sunset.jpg" alt="Sunset on Hvar">
   </div>
