--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
       maxZoom: 19
     }).addTo(map);
+    map.invalidateSize();
 
     // ────────────────────────────────────────────────
   // Example markers that open trip pages in new tab
