--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ L.marker([45.8150, 15.9819])
       className: 'custom-popup'  // optional: for extra styling
     }
   )
-  //.on('click', function() {
+  .on('click', function() {
     // Optional: still open the full page directly if you want (but popup is better UX)
     // window.open('croatia-2025.html', '_blank');
   })
