Edit text u markeru - Update index.html

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
   // ────────────────────────────────────────────────
   // Zagreb trip example
 L.marker([45.8150, 15.9819])
-  .bindTooltip("Zagreb Adventure 2025 (click for preview)", {
+  .bindTooltip("Storm chase 13.07.2023.", {
     permanent: false,
     direction: 'top'
   })
   .bindPopup(
     '<div style="text-align:center; min-width:180px;">' +
-      '<h4 style="margin:8px 0 4px;">Zagreb Adventure 2025</h4>' +
+      '<h4 style="margin:8px 0 4px;">Storm chase 13.07.2023.</h4>' +
       '<img src="images/zagreb-thumb.jpg" alt="Zagreb preview" ' +
            'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
-      '<p style="margin:4px 0; font-size:13px;">Explore the capital: markets, museums & nightlife</p>' +
+      '<p style="margin:4px 0; font-size:13px;">Superćelija od Slovenije do Rumunjske</p>' +
       '<a href="croatia-2025.html" target="_blank" ' +
          'style="display:inline-block; padding:6px 12px; background:#0066cc; color:white; ' +
                 'text-decoration:none; border-radius:4px; font-weight:bold;">' +
