--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   // Example markers that open trip pages in new tab
   // ────────────────────────────────────────────────
   // Zagreb trip example
-L.marker([45.8150, 15.9819])
+L.marker([45.8532, 16.1388])
   .bindTooltip("Storm chase 13.07.2023.", {
     permanent: false,
     direction: 'top'
@@ -68,8 +68,8 @@ L.marker([45.8150, 15.9819])
   .addTo(map);
     
   // Zagreb trip example
-  //L.marker([45.8150, 15.9819])
-    //.bindTooltip("Zagreb Adventure 2025 (click to read)", { permanent: false, direction: 'top' })
+  //L.marker([45.8532, 16.1388])
+    //.bindTooltip("Storm chase 13.07.2023.", { permanent: false, direction: 'top' })
     //.on('click', function() {
       //window.open('croatia-2025.html', '_blank');   // opens in new tab
       // OR: window.location.href = 'croatia-2025.html';  // replaces current page
