--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   // Zagreb trip example
 L.marker([45.8532, 16.1388], {
   icon: L.icon({
-    iconUrl: 'images/storm.png',          // path to your icon image in repo
+    iconUrl: 'images/thunder.png',          // path to your icon image in repo
     iconSize: [32, 32],                   // size in pixels [width, height] - adjust to fit your image
     iconAnchor: [16, 32],                 // point of the icon that "pins" to the location (center-bottom usually)
     popupAnchor: [0, -32],                // where popup opens relative to icon (above it)
