--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ var stormMarker = L.marker(stormLocation, {
             // map.fitBounds(routeBounds, { padding: [150, 150], animate: true });
           } else {
             // Optional: Just center on the route without changing zoom
-            map.panTo(routeBounds.getCenter(), { animate: true });
+            //map.panTo(routeBounds.getCenter(), { animate: true });
             // Or do nothing → user stays at current zoom
           }
         });
