--- a/croatia-2025.html
+++ b/croatia-2025.html
@@ -15,7 +15,7 @@
 <body>
   <a href="index.html" class="back-link">← Back to the Map</a>
   <h1>Storm chase 13.07.2023.</h1>
-  <p><em>Zagreb --> Popovec --> Čazma</em></p>
+  <p><em>Zagreb → Popovec → Čazma</em></p>
 
 <!-- Mini-map container -->
 <div id="mini-map" style="height: 250px; width: 350px; border: 2px solid #ccc; border-radius: 8px; margin: 20px auto; box-shadow: 0 2px 8px rgba(0,0,0,0.15);"></div>
