--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ var stormMarker = L.marker(stormLocation, {
       '<img src="images/zagreb-thumb.jpg" alt="Zagreb preview" ' +
            'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
       '<p style="margin:4px 0; font-size:13px;">Superćelija od Slovenije do Rumunjske</p>' +
-      '<a href="croatia-2025.html" target="_blank" ' +
+      '<a href="stormchase13072023.html" target="_blank" ' +
          'style="display:inline-block; padding:6px 12px; background:#0066cc; color:white; ' +
                 'text-decoration:none; border-radius:4px; font-weight:bold;">' +
          'Read full story →' +
