--- a/stormchase13072023.html
+++ b/stormchase13072023.html
@@ -79,9 +79,11 @@ var customIcon = L.icon({
 });
 
 // Starting point: Zagreb
-var zagreb = [45.8022, 16.0487];
+var zagreb = [45.7994, 15.9786];
 L.marker(zagreb, { icon: customIcon }).addTo(miniMap);
-
+var zagrebistok = [45.8008, 16.0546];
+var komin = [46.0018, 16.2822];
+L.marker(komin, { icon: customIcon }).addTo(miniMap);
 // End point: Storm location
 var stormLocation = [45.8532, 16.1388];
 L.marker(stormLocation, { icon: customIcon }).addTo(miniMap);
@@ -90,6 +92,8 @@ L.marker(stormLocation, { icon: customIcon }).addTo(miniMap);
 var miniRoute = L.Routing.control({
   waypoints: [
     L.latLng(zagreb),
+    L.latLng(zagrebistok),
+    L.latLng(komin),
     L.latLng(stormLocation)
   ],
   createMarker: function(i, wp) { 
