--- a/stormchase13072023.html
+++ b/stormchase13072023.html
@@ -77,19 +77,23 @@ var customIcon = L.icon({
   popupAnchor: [0, -32],
   tooltipAnchor: [0, -20]
 });
-
+// Variable to store the route
+var miniRoute = null;
 // Starting point: Zagreb
 var zagreb = [45.7994, 15.9786];
-L.marker(zagreb, { icon: customIcon }).addTo(miniMap);
+//waypoint to highway
 var zagrebistok = [45.8008, 16.0546];
+//komin
 var komin = [46.0018, 16.2822];
-L.marker(komin, { icon: customIcon }).addTo(miniMap);
 // End point: Storm location
 var stormLocation = [45.8532, 16.1388];
+
+L.marker(zagreb, { icon: customIcon }).addTo(miniMap);
+L.marker(komin, { icon: customIcon }).addTo(miniMap);
 L.marker(stormLocation, { icon: customIcon }).addTo(miniMap);
 
 // Draw the route (same style as main map)
-var miniRoute = L.Routing.control({
+miniRoute = L.Routing.control({
   waypoints: [
     L.latLng(zagreb),
     L.latLng(zagrebistok),
