--- a/stormchase13072023.html
+++ b/stormchase13072023.html
@@ -90,27 +90,39 @@ var komin = [46.0018, 16.2822];
 // End point: Storm location
 var stormLocation = [45.8532, 16.1388];
 
-// Draw the route (same style as main map)
+// Draw the route – force all waypoints as via-points
 miniRoute = L.Routing.control({
   waypoints: [
-    L.latLng(zagreb),
-    L.latLng(zagrebistok),
-    L.latLng(autocesta),
-    L.latLng(komin),
-    L.latLng(stormLocation)
+    L.latLng(zagreb),       // start
+    L.latLng(zagrebistok),  // via 1 – Zagreb east on-ramp
+    L.latLng(autocesta),    // via 2 – further on A4
+    L.latLng(komin),        // via 3
+    L.latLng(stormLocation) // end
   ],
-  createMarker: function() { return null; }, // hide extra markers
+  createMarker: function(i, wp) { 
+    // Only show markers for start, komin, and end (hide intermediates)
+    if (i === 0 || i === 3 || i === 4) {  // indices: 0=start, 3=komin, 4=end
+      return L.marker(wp.latLng, { icon: customIcon });
+    }
+    return null;
+  },
   addWaypoints: false,
   routeWhileDragging: false,
   show: false,
+  // Important: Tell OSRM to use these as via-points (not just snap)
+  router: L.Routing.osrmv1({
+    serviceUrl: 'https://router.project-osrm.org/route/v1',
+    profile: 'driving',
+    routingOptions: {   // ← this helps force via behavior
+      steps: true,
+      geometries: 'polyline6',
+      overview: 'full'
+    }
+  }),
   lineOptions: {
     styles: [{color: '#0066cc', weight: 5, opacity: 0.9}]
   }
 }).addTo(miniMap);
-  
-L.marker(zagreb, { icon: customIcon }).addTo(miniMap);
-L.marker(komin, { icon: customIcon }).addTo(miniMap);
-L.marker(stormLocation, { icon: customIcon }).addTo(miniMap);
   
 // Auto-fit to route once loaded
 miniRoute.on('routesfound', function(e) {
