--- a/stormchase13072023.html
+++ b/stormchase13072023.html
@@ -53,15 +53,7 @@
 <script>
 // Mini-map setup
 var miniMap = L.map('mini-map', {
-  zoomControl: false,
-  attributionControl: false,
-  dragging: false,
-  scrollWheelZoom: false,
-  doubleClickZoom: false,
-  boxZoom: false,
-  tap: false,
-  touchZoom: false,
-  keyboard: false
+  zoomControl: false
 });
 
 // Base layer (same as main map)
