--- a/stormchase13072023.html
+++ b/stormchase13072023.html
@@ -37,7 +37,8 @@
 <!-- Leaflet Routing Machine -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
 <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/leaflet-polylineoffset@1.1.1/leaflet.polylineoffset.min.js"></script>
+  
 <!-- Mini-map (place this where you want it in the body, e.g. after <h1> or in a section) -->
 <div id="mini-map" style="
   height: 250px; 
