--- a/stormchase13072023.html
+++ b/stormchase13072023.html
@@ -109,7 +109,7 @@ miniRoute = L.Routing.control({
     }
   }),
   lineOptions: {
-    styles: [{color: '#0066cc', weight: 5, opacity: 0.9}]
+    styles: [{color: '#0066cc', weight: 5, opacity: 0.9, offset: -2}]
   }
 }).addTo(miniMap);
   
