minimap resize - Update stormchase13072023.html

--- a/stormchase13072023.html
+++ b/stormchase13072023.html
@@ -40,7 +40,7 @@
 
 <!-- Mini-map (place this where you want it in the body, e.g. after <h1> or in a section) -->
 <div id="mini-map" style="
-  height: 250px; 
+  height: 380px; 
   width: 380px; 
   float: left;                /* ← left aligned */
   margin: 0 25px 20px 0;      /* space on right & bottom for text wrap */
@@ -109,7 +109,7 @@ miniRoute = L.Routing.control({
     }
   }),
   lineOptions: {
-    styles: [{color: '#0066cc', weight: 5, opacity: 0.9, offset: -2}]
+    styles: [{color: '#0066cc', weight: 5, opacity: 0.9}]
   }
 }).addTo(miniMap);
   
