--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -105,6 +105,12 @@
     // Auto-fit when route is ready
     miniRoute.on('routesfound', function(e) {
           var routeLine = e.routes[0].coordinates;
+          var bounds = L.latLngBounds(e.routes[0].coordinates);
+      
+          miniMap.fitBounds(bounds, {
+            padding: [250, 250],     // ← your desired zoom-out level (adjust higher if needed, e.g. [200, 200])
+            maxZoom: 11              // ← prevents too close zoom on short routes
+          });
     });
   </script>
 
