--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -96,7 +96,7 @@
       },
       addWaypoints: false,
       routeWhileDragging: false,
-      show: false,
+      show: true,
       lineOptions: {
         styles: [{color: '#0066cc', weight: 6, opacity: 0.8}]
       }
