--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -108,8 +108,7 @@
           var bounds = L.latLngBounds(e.routes[0].coordinates);
       
           miniMap.fitBounds(bounds, {
-            padding: [250, 250],     // ← your desired zoom-out level (adjust higher if needed, e.g. [200, 200])
-            maxZoom: 11              // ← prevents too close zoom on short routes
+            padding: [40, 40]           // ← your desired zoom-out level
           });
     });
   </script>
