--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -15,7 +15,29 @@
   </style>
 </head>
 <body>
-  <h1>Storm chase 13.07.2023.</h1>
+  <div style="margin-bottom: 30px;">
+  <!-- Date (small, gray, above title) -->
+  <div style="
+    font-size: 1.1rem;
+    color: #666;
+    font-weight: normal;
+    margin-bottom: 8px;
+  ">
+    13 July 2023
+  </div>
+
+  <!-- Main title with # prefix, bold, large -->
+  <h1 style="
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 2.8rem;          /* adjust 2.5–3.5rem to taste */
+    font-weight: 800;           /* very bold */
+    color: #000;
+    margin: 0;
+    line-height: 1.1;
+  ">
+    Storm chase 13.07.2023
+  </h1>
+</div>
   
   <div style="margin: 10px 0 20px;">
     <a href="index.html" style="
@@ -32,7 +54,7 @@
     </a>
   </div>
 
-  <p><em>Zagreb → Popovec → Čazma</em></p>
+  <p><em>Zagreb → Komin → reposition back to Popovec → Čazma</em></p>
 
   <!-- Leaflet CSS + JS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
