--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -15,21 +15,27 @@
   </style>
 </head>
 <body>
-  <div style="margin-bottom: 30px;">
-  <!-- Date (small, gray, above title) -->
   <div style="
-    font-size: 1.1rem;
-    color: #666;
-    font-weight: normal;
-    margin-bottom: 8px;
-  ">
-    13 July 2023
-  </div>
+  font-size: 1.1rem;
+  color: #666;
+  font-weight: normal;
+  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+">
+  <img 
+    src="images/clock.png" 
+    alt="Date" 
+    style="width: 16px; height: 16px;"
+  >
+  <span>13 July 2023</span>
+</div>
 
   <!-- Main title with # prefix, bold, large -->
   <h1 style="
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 2.8rem;          /* adjust 2.5–3.5rem to taste */
+    font-size: 2.5rem;          /* adjust 2.5–3.5rem to taste */
     font-weight: 800;           /* very bold */
     color: #000;
     margin: 0;
