--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -15,7 +15,31 @@
   </style>
 </head>
 <body>
+<!-- Hero header with background image -->
+<div style="
+  position: relative;
+  height: 400px;                    /* adjust height: 350–500px */
+  background-image: url('images/background13072023.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 0 -10px 40px -10px;       /* full-width effect, adjust if needed */
+">
+  <!-- Dark overlay for text readability -->
   <div style="
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.45);  /* semi-dark overlay – 0.4–0.6 works best */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    padding: 0 20px;
+  ">
+    <!-- Date with icon -->
+    <div style="
   font-size: 0.9rem;
   color: #666;
   font-weight: normal;
@@ -32,7 +56,7 @@
   <span>13 July 2023</span>
 </div>
 
-  <!-- Main title with # prefix, bold, large -->
+    <!-- Main title with # prefix, bold, large -->
   <h1 style="
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 2.5rem;          /* adjust 2.5–3.5rem to taste */
@@ -43,7 +67,8 @@
   ">
     Storm chase 13.07.2023
   </h1>
-</div>
+  </div>
+  </div>
   
   <div style="margin: 10px 0 20px;">
     <a href="index.html" style="
