--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -25,6 +25,19 @@
   background-repeat: no-repeat;
   margin: 0 -10px 40px -10px;       /* full-width effect, adjust if needed */
 ">
+  <!-- Dark overlay for text readability -->
+  <div style="
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.25);  /* semi-dark overlay – 0.4–0.6 works best */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    text-align: left;
+    color: white;
+    padding: 0 20px;
+  ">
   <!-- Date with icon -->
   <div style="
   font-size: 0.9rem;
@@ -54,6 +67,7 @@
   ">
     Storm chase 13.07.2023
   </h1>
+  </div>
   </div>
   
   <div style="margin: 10px 0 20px;">
