--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -41,7 +41,7 @@
   <!-- Date with icon -->
   <div style="
   font-size: 0.9rem;
-  color: #666;
+  color: white;
   font-weight: normal;
   margin-bottom: 8px;
   display: flex;
@@ -59,9 +59,9 @@
     <!-- Main title with # prefix, bold, large -->
   <h1 style="
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 2.5rem;          /* adjust 2.5–3.5rem to taste */
+    font-size: 2.7rem;          /* adjust 2.5–3.5rem to taste */
     font-weight: 800;           /* very bold */
-    color: #000;
+    color: white;
     margin: 0;
     line-height: 1.1;
   ">
