--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -51,7 +51,7 @@
   <img 
     src="images/clock.png" 
     alt="Date" 
-    style="width: 16px; height: 16px;"
+    style="color: white; width: 16px; height: 16px;"
   >
   <span>13 July 2023</span>
   </div>
