--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -49,7 +49,7 @@
   gap: 8px;
 ">
   <img 
-    src="images/clock.png" 
+    src="images/clock2.png" 
     alt="Date" 
     style="color: white; width: 16px; height: 16px;"
   >
