--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -20,6 +20,8 @@
   position: relative;
   height: 388px;                    /* adjust height: 350–500px */
   width: 100vw;                     /* full viewport width */
+  margin-left: calc(-50vw + 50%);   /* centers it perfectly and extends full width */
+  margin-right: calc(-50vw + 50%);
   background-image: url('images/background13072023.jpg');
   background-size: cover;
   background-position: center;
