--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -36,8 +36,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;         /* left-aligned text like your current setup */
-    padding-left: 8%;                /* indent from left edge – adjust 5%–10% */
-    padding-right: 8%;
+    padding-left: 5%;                /* indent from left edge – adjust 5%–10% */
+    padding-right: 5%;
     color: white;
   ">
   <!-- Date with icon -->
@@ -48,7 +48,7 @@
   margin-bottom: 8px;
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 10px;
 ">
   <img 
     src="images/clock2.png" 
@@ -66,6 +66,7 @@
     color: white;
     margin: 0;
     line-height: 1.1;
+    text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
   ">
     Storm chase 13.07.2023
   </h1>
