--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Storm chase 13.07.2023.</title>
   <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 10px; max-width: 1100px; margin: 0 auto; }
+    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; max-width: 1100px; margin: 0 auto; }
     h1 { color: #2c3e50; }
     img { max-width: 100%; height: auto; border-radius: 8px; margin: 10px 0; }
     .gallery { display: flex; flex-wrap: wrap; gap: 10px; }
@@ -22,6 +22,7 @@
   width: 100vw;                     /* full viewport width */
   margin-left: calc(-50vw + 50%);   /* centers it perfectly and extends full width */
   margin-right: calc(-50vw + 50%);
+  margin-top: 0;
   background-image: url('images/background13072023.jpg');
   background-size: cover;
   background-position: center;
