--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -36,6 +36,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-bottom: 80px;
     align-items: flex-start;         /* left-aligned text like your current setup */
     padding-left: 15%;                /* indent from left edge – adjust 5%–10% */
     padding-right: 15%;
