--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -72,18 +72,19 @@
   </h1>
 
   <div style="margin: 10px 0 20px;">
-    <a href="index.html" style="
-      display: inline-block;
-      padding: 10px 20px;
-      background: #1e3a8a;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    ">
-      ← Back to Chase Map
-    </a>
+  <a href="index.html" style="
+    display: inline-block;
+    padding: 8px 16px;               /* smaller padding */
+    background: #1e3a8a;
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;              /* slightly less rounded */
+    font-weight: bold;
+    font-size: 14px;                 /* smaller text */
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  ">
+    ← Back to Chase Map
+  </a>
   </div>
   </div>
   </div>
