--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -73,18 +73,18 @@
 
   <div style="margin: 10px 0 20px;">
   <a href="index.html" style="
-    display: inline-block;
-    padding: 8px 16px;               /* smaller padding */
-    background: #1e3a8a;
-    color: white;
-    text-decoration: none;
-    border-radius: 6px;              /* slightly less rounded */
-    font-weight: bold;
-    font-size: 14px;                 /* smaller text */
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-  ">
-    ← Back to Chase Map
-  </a>
+  display: inline-block;
+  padding: 6px 12px;               /* tiny padding */
+  background: #1e3a8a;
+  color: white;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: 600;
+  font-size: 13px;                 /* even smaller text */
+  box-shadow: 0 1px 4px rgba(0,0,0,0.15);
+">
+  ← Map
+</a>
   </div>
   </div>
   </div>
